
tslib 1.18 - unreleased
================================
This release includes libts version 0.9.3 and the following changes:
* support for screen-rotation in ts_calibrate and linear module
* add experimental module_raw input_evdev that needs libevdev


tslib 1.17 - released 2018-09-06
================================
This release includes libts version 0.9.2 and the following changes:
* improved backwards compatibility for ts_uinput and the library
* added support for cmake build system

This release includes the following bugfixes:
* f65e5eb median: fix pen_down propagation for read_mt()


tslib 1.16 - released 2018-04-19
================================
This release includes libts version 0.9.1 and the following changes:
* `module_raw tatung` is now disabled in the default build config. Users must
  `./configure --enable-tatung` if they rely on it.
* new `module_raw one-wire-ts-input` for FriedlyARM devices (disabled by
  default)
* simple tslib_version() function to get the version string

This release includes the following bugfixes:
* efcba6e ts_uinput: (fix for Android) write only one input_event at a time
* e63f33f invert: fix ts_read() iteration over multiple samples
* 932bb4f ts_uinput: fail for unsupported old kernel versions


tslib 1.15 - released 2018-01-11
================================

This release includes libts version 0.9.0 and the following changes:
* New ts_get_eventpath() API to learn the opened device file path
* ts_test_mt shows the number of supported concurrent touch contacts
* New filter module "invert"
* ts_uinput: fallback to fb0 and new option --nofb

This release includes the following bugfixes:
* 47fb616 ts_test_mt: avoid a flickering cross in the center
* 249d814 input-raw: remove eGalax version 0112 workaround
* 6975733 input-raw: mark BTN_TOUCH code valid
* fbeabc6 input-raw: fix pen_up for non-pressure devices


tslib 1.14 - released 2017-11-12
================================
