@@ -40,6 +40,15 @@ Rotate the screen. value is 0 for 0 degree, 1 for 90 degrees (CW), 2 for 180 deg
 .RE
 .PP
 
+.sp
+.sp
+\fB\-t, \-\-min_interval\fR
+.sp
+.RS 4
+The time in milliseconds that has to pass before a crosshair is pressed by the user. This may be useful to avoid insanely fast or accidentally wrong taps and thus inaccurate calibration.
+.RE
+.PP
+
 .SH "ENVIRONMENT VARIABLES"
 .PP
 see ts.conf (5)
